# bilibili-focus-mode

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  coverage-report.json  eslint.config.js  package-lock.json  package.json  run_e2e_tests.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-and-release.yml  ci.yml
chromium-extension-monitor/: .gitignore  Cargo.toml  README.md  chromium-monitor.log.2026-06-19  config.toml.example
chromium-extension-monitor/benches/: performance.rs
chromium-extension-monitor/src/: error.rs  lib.rs  main.rs
chromium-extension-monitor/src/config/: cli.rs  file.rs  mod.rs
chromium-extension-monitor/src/extension/: detector.rs  mod.rs
chromium-extension-monitor/src/monitor/: mod.rs  service.rs
chromium-extension-monitor/src/native_messaging/: handler.rs  mod.rs  protocol.rs  registration.rs
chromium-extension-monitor/src/process/: manager.rs  mod.rs
chromium-extension-monitor/src/tray/: mod.rs
chromium-extension-monitor/src/utils/: logger.rs  mod.rs
docs/: ARCHITECTURE.md  README.md  architecture-design.md  github-action.md  tech-stack.md
e2e/: README.md  run_all_tests.py  test_element_discovery.py  test_manager_functionality.py  test_popup_functionality.py  test_responsive_layout.py
src/: manifest.json
src/__mocks__/: webextension-polyfill.ts
src/background/: AlarmHandler.ts  DebtMigrationService.ts  MessageHandlers.ts  MessageRouter.ts  NativeMessagingClient.ts  index.test.ts  index.ts
src/content/: NavigationWatcher.ts  PermissionOrchestrator.ts  StyleOrchestrator.ts  index.tsx  (+2 more)
(+162 files in other folders)
